--- a/app/src/main/res/layout/item_practice_clarify.xml
+++ b/app/src/main/res/layout/item_practice_clarify.xml
@@ -24,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="类别"
-            android:shadowColor="#CCCCCC"
-            android:shadowRadius="2"
+            android:shadowColor="#ffffff"
+            android:shadowRadius="1"
             android:shadowDx="2"
             android:shadowDy="2"
             android:textColor="#000000"
