--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.EnglishApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.EnglishApp" parent="Theme.Design.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#8DD0CE</item>
+        <item name="colorPrimaryVariant">#00FFFFFF</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">#636363</item>
+
     </style>
 
     <style name="Theme.EnglishApp" parent="Base.Theme.EnglishApp" />
