--- a/app/src/main/res/layout/item_practice_clarify.xml
+++ b/app/src/main/res/layout/item_practice_clarify.xml
@@ -14,12 +14,12 @@
         app:layout_constraintHorizontal_bias="0.0"
         android:background="@drawable/card"
         android:layout_marginEnd="20dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/type_im"
+        app:layout_constraintTop_toTopOf="@+id/type_im"
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/type_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -35,6 +35,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/type_des"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="描述123456789"
@@ -45,12 +46,12 @@
             android:textColor="#000000"
             android:layout_marginTop="10dp"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintStart_toStartOf="@+id/type_name"
+            app:layout_constraintTop_toBottomOf="@+id/type_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/type_im"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="10dp"
