--- a/app/src/main/res/layout/item_practice_clarify.xml
+++ b/app/src/main/res/layout/item_practice_clarify.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:background="@drawable/card"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintStart_toEndOf="@+id/type_im"
         app:layout_constraintTop_toTopOf="@+id/type_im"
         app:layout_constraintVertical_bias="0.0">
@@ -36,16 +36,19 @@
 
         <TextView
             android:id="@+id/type_des"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="描述123456789"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
             android:shadowColor="#CCCCCC"
-            android:shadowRadius="2"
             android:shadowDx="2"
             android:shadowDy="2"
+            android:shadowRadius="2"
+            android:text="描述123456789"
             android:textColor="#000000"
-            android:layout_marginTop="10dp"
             android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/type_name"
             app:layout_constraintTop_toBottomOf="@+id/type_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -55,7 +58,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="10dp"
-        android:background="@mipmap/test"
+        android:background="@drawable/card_grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
