--- a/app/src/main/res/layout/item_advice.xml
+++ b/app/src/main/res/layout/item_advice.xml
@@ -18,22 +18,23 @@
 
         <ImageView
             android:id="@+id/advice_im"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:background="@drawable/card_double"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/advice_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_marginEnd="10dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="13dp"
             android:text="标题标题标题"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/advice_im"
             app:layout_constraintTop_toTopOf="@+id/advice_im" />
 
