--- a/app/src/main/res/drawable/card_green.xml
+++ b/app/src/main/res/drawable/card_green.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
         android:startColor="#6BD19E"
-        android:endColor="#67F6AF"
+        android:endColor="#D0EDDF"
         android:angle="270">
 
     </gradient>
