--- a/app/src/main/res/drawable/number.xml
+++ b/app/src/main/res/drawable/number.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <gradient
-        android:startColor="#B0E0E6"
+        android:startColor="#c2c2c2"
         android:endColor="#ffffff"
         android:angle="135"
         />
