--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@mipmap/login"
     android:layout_height="match_parent">
 
     <TextView
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="124dp"
         android:text="用户登录"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="44dp"
             android:text="账号"
+            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="密码"
+            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -53,8 +56,11 @@
         <EditText
             android:id="@+id/login_acc"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:textColor="#ffffff"
+            android:paddingStart="5dp"
             android:layout_marginStart="40dp"
+            android:background="@drawable/login_card"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -63,8 +69,11 @@
         <EditText
             android:id="@+id/login_pwd"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:paddingStart="5dp"
+            android:background="@drawable/login_card"
+            android:layout_height="30dp"
             android:layout_marginStart="40dp"
+            android:textColor="#ffffff"
             android:inputType="textWebPassword"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -76,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="登录"
-            android:backgroundTint="#8DD0CE"
+            android:background="@drawable/login_card"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +96,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:textColor="#ffffff"
             android:text="点此注册"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
