--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@mipmap/login"
     android:layout_height="match_parent">
 
     <TextView
@@ -12,7 +13,7 @@
         android:layout_marginTop="124dp"
         android:text="用户注册"
         android:textSize="20sp"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +37,7 @@
             android:layout_marginStart="56dp"
             android:layout_marginTop="48dp"
             android:text="账号名"
+            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,17 +48,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="设置密码"
+            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <EditText
+            android:paddingStart="5dp"
+            android:textColor="#ffffff"
             android:id="@+id/telnum"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:background="@drawable/login_card"
             android:layout_marginStart="40dp"
             android:textSize="16sp"
             android:hint="请输入您想设置的账号名"
+            android:textColorHint="#c2c2c2"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toTopOf="@+id/textView3"
@@ -65,8 +72,10 @@
         <EditText
             android:id="@+id/reg_pwd"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_height="40dp"
+            android:paddingStart="5dp"
+            android:textColor="#ffffff"
+            android:background="@drawable/login_card"            android:layout_marginStart="40dp"
             android:inputType="textWebPassword"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -78,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="84dp"
             android:text="注册"
-            android:backgroundTint="#8DD0CE"
+            android:background="@drawable/login_card"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -90,6 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认密码"
+            android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -99,8 +109,10 @@
         <EditText
             android:id="@+id/reg_repwd"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:inputType="textWebPassword"
+            android:layout_height="40dp"
+            android:paddingStart="5dp"
+            android:textColor="#ffffff"
+            android:background="@drawable/login_card"            android:inputType="textWebPassword"
             app:layout_constraintBottom_toBottomOf="@+id/textView7"
             app:layout_constraintStart_toStartOf="@+id/reg_pwd"
             app:layout_constraintTop_toTopOf="@+id/textView7"
