--- a/app/src/main/res/layout/activity_text_page.xml
+++ b/app/src/main/res/layout/activity_text_page.xml
@@ -49,6 +49,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:text="TextView1235647897"
+                android:textColor="#000000"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -58,12 +60,11 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginBottom="20dp"
-                app:layout_constraintBottom_toTopOf="@+id/article_read"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/article_thumb_num"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/article_content"
-                app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/baseline_thumb_up_24" />
 
             <TextView
@@ -113,12 +114,15 @@
 
             <TextView
                 android:id="@+id/article_title1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:text="123456789"
+                android:gravity="center"
                 android:textColor="#000000"
-                android:textSize="20sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
