--- a/app/src/main/res/layout/fragment_advice.xml
+++ b/app/src/main/res/layout/fragment_advice.xml
@@ -37,7 +37,7 @@
             android:layout_marginEnd="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView"
-            app:srcCompat="@drawable/baseline_search_24" />
+            app:srcCompat="@mipmap/search" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
