--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -87,11 +87,53 @@
         android:layout_height="60dp"
         android:layout_marginTop="1dp"
         android:background="@drawable/card_white"
-        android:id="@+id/mine_setting"
+        android:id="@+id/mine_punch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mine_credit">
+
+        <ImageView
+            android:id="@+id/punch_im"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="33dp"
+            android:background="@mipmap/calendar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:text="我的打卡"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/punch_im"
+            app:layout_constraintStart_toEndOf="@+id/punch_im"
+            app:layout_constraintTop_toTopOf="@+id/punch_im" />
+
+        <ImageView
+            android:id="@+id/punch_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/baseline_navigate_next_24" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mine_setting"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/card_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mine_punch">
 
         <ImageView
             android:id="@+id/set_im"
