--- a/app/src/main/res/layout/item_hot_rank.xml
+++ b/app/src/main/res/layout/item_hot_rank.xml
@@ -2,28 +2,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c2c2c2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <ImageView
         android:id="@+id/hot_im"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/hot_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="12345689/*"
-        android:textSize="20sp"
-        android:textColor="#000000"
         android:layout_marginStart="10dp"
+        android:text="12345689/*"
+        android:textColor="#000000"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="@+id/hot_im"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/hot_im"
-        app:layout_constraintTop_toTopOf="@+id/hot_im" />
+        app:layout_constraintTop_toTopOf="@+id/hot_im"
+        android:layout_marginEnd="20dp"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
