--- a/app/src/main/res/layout/item_page.xml
+++ b/app/src/main/res/layout/item_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -8,28 +9,31 @@
         android:id="@+id/page_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/card_grey_double"
         android:paddingStart="10dp"
-        android:paddingTop="5dp"
+        android:paddingTop="10dp"
+        android:layout_marginBottom="10dp"
         android:paddingEnd="10dp"
         android:paddingBottom="5dp"
         android:text="123456789s4"
-        android:layout_marginStart="10dp"
         android:textColor="#000000"
         android:textSize="15sp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/page_res"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/page_mic"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/page_play" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/page_play"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@mipmap/play"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@mipmap/play"
+        app:layout_constraintBottom_toTopOf="@+id/page_mic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,21 +41,21 @@
         android:id="@+id/page_mic"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="10dp"
         android:background="@mipmap/mic2"
         app:layout_constraintEnd_toEndOf="@id/page_play"
-        app:layout_constraintTop_toBottomOf="@+id/page_play" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
         android:id="@+id/page_res"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:background="@mipmap/result"
-        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/page_play"
-        app:layout_constraintTop_toBottomOf="@+id/page_mic" />
+        app:layout_constraintTop_toBottomOf="@+id/page_mic"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
