--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="10dp"
         android:background="@mipmap/avatar"
+        app:shapeAppearanceOverlay="@style/circleImageStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/rank"
         app:layout_constraintTop_toTopOf="parent" />
